--- a/index.css
+++ b/index.css
@@ -50,18 +50,57 @@ h2 {
     font-size: 2.75em;
     text-align: center;
 }
-hr {
-    border-top: 4px solid darkcyan;
+h2 + hr {
+    border-top: 4px solid rgb(0, 149, 160);
     border-radius: 4px;
     margin: 2mm;
 }
 ol, ul > li{
     font-size: 1.15em;
 }
-.form-row{
-    background-color: #a4c0ed;
+details > summary {
+    font-size: 1.5em;
+    margin: 10px;
+}
+summary + p{
+    padding: 10px 10px 10px 10px;
+    font-size: 1.5em;
+}
+.contact-me > form{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto auto auto auto auto;
+    align-self: center;
+    background-color: rgb(0, 149, 160);
+    border-radius: 10px;
+}
+form h4 {
+    font-size: 1.3em;
+    padding: 10px;
+}
+h4 ~ .form-row{
     border-style: solid;
     border-color: black;
-    margin: 10px;
+    margin: 5px;
     padding: 5px;
+    min-width: 20vw;
+    max-width: 80vw;
 }
+.contact-me input[type="submit"] {
+    width: 25%;
+    height: 85%;
+    justify-self: center;
+    margin-bottom: 30px;
+}
+input, textarea, select {
+    background-color: hsl(0, 100%, 100%);
+    border-radius: 5px;
+}
+textarea{
+    min-width: 20%;
+    max-width: 60%;
+}
+select {
+    width: 1in;
+}
+
