--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
     vertical-align: baseline;
     background: transparent;
 }
+
+/* Header */
 header{
     display: flex;
     flex-direction: column;
@@ -15,22 +17,31 @@ header{
 }
 header > h1{
     color: white;
-    padding: 30px;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-bottom: 15px;
     font-size: 5em;
 }
 header img {
-    border: solid black;
+    border: solid #000000;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
 }
 .intro{
     width: 40%;
 }
 .intro > p {
-    color: white;
+    color: #FFF;
     text-align: center;
     font-size: 1em;
 }
+.intro a:active {
+    background-color: rgba(255, 255, 0, .5);
+}
+/* Info */
 .info{
     display: grid;
     grid-template-rows: auto;
@@ -56,11 +67,26 @@ h2 + hr {
     margin: 2mm;
 }
 ol, ul > li{
+    position: relative;
+    left: 40px;
     font-size: 1.15em;
 }
+p.fixed  {
+    position: fixed;
+    bottom: 40px;
+    left: 40px;
+}
+
+/* Contact me */
 details > summary {
     font-size: 1.5em;
     margin: 10px;
+    border-radius: 10px;
+    padding: 10px;
+}
+details > summary:hover {
+    background-color: hsla(120,60%,70%,0.3);
+    text-decoration: underline;
 }
 summary + p{
     padding: 10px 10px 10px 10px;
@@ -96,11 +122,20 @@ input, textarea, select {
     background-color: hsl(0, 100%, 100%);
     border-radius: 5px;
 }
-textarea{
+#comments{
     min-width: 20%;
     max-width: 60%;
 }
 select {
     width: 1in;
+}
+
+/* Schedule */
+
+
+/* Footer */
+nav {
+    /* Omitted for current lab */
+    display: none;
 }
 
