--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
     vertical-align: baseline;
     background: transparent;
 }
-
 /* Header */
 header{
     display: flex;
@@ -139,3 +138,16 @@ nav {
     display: none;
 }
 
+@media only screen and (max-width: 600px) {
+    header > h1{
+        padding-top: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 10px;
+        font-size: 3em;
+    }
+    .intro > p {
+        text-align: center;
+        font-size: .8em;
+    }
+}
